--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,47 +63,71 @@
             android:textSize="30sp"
             android:textStyle="bold"/>
 
-    </LinearLayout>
+    </LinearLayout
+>
 
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="270dp"
-        android:paddingLeft="75dp">
+        android:layout_marginLeft="75dp"
+        android:orientation="vertical"
+        android:background="@drawable/layout_border">
 
         <TextView
-            android:id="@+id/Situation"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/layout_border"
-            android:gravity="center"
-            android:text="Select Situation"
+            android:id="@+id/Cut"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cut"
             android:textColor="#228B22"
             android:textSize="24sp"/>
+
+        <TextView
+            android:id="@+id/Puncture"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Puncture"
+            android:layout_alignBottom="@id/Cut"
+            android:textColor="#228B22"
+            android:textSize="24sp"/>
+
+        <TextView
+            android:id="@+id/Scrapes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Scrapes"
+            android:textColor="#228B22"
+            android:textSize="24sp"/>
+
+        <TextView
+            android:id="@+id/Burns"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Burns"
+            android:textColor="#228B22"
+            android:textSize="24sp"/>
+
+
+
     </LinearLayout>
 
 
-    <LinearLayout
+
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:paddingTop="270dp">
+        android:layout_marginTop="270dp"
+        android:background="@drawable/layout_border">
 
-        <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:id="@+id/Display"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/layout_border"
-                android:text="Display"
-                android:textColor="#228B22"
-                android:textSize="24sp" />
-        </ScrollView>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/Display"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="Display"
+            android:textColor="#228B22"
+            android:textSize="24sp" />
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
