--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -9,17 +9,20 @@
 
     <item android:id="@+id/news"
         android:icon="@drawable/tracker"
-        android:title="Tips n' News">
+        android:title="Tips n' News"
+        android:onClick="openNewsView">
     </item>
 
     <item android:id="@+id/setting"
         android:icon="@drawable/settings"
-        android:title="Settings" >
+        android:title="Settings"
+        android:onClick="openSettingsView">
     </item>
 
     <item android:id="@+id/about"
         android:icon="@drawable/info"
-        android:title="About">
+        android:title="About"
+        android:onClick="openInfoView">
     </item>
 
 </menu>
