--- a/app/src/main/res/menu/mymenu.xml
+++ b/app/src/main/res/menu/mymenu.xml
@@ -1,9 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/mybutton"
-        android:title="911"
+        android:id="@+id/Emergency"
+        android:title="911 call"
         app:showAsAction="always"
-        android:icon="@drawable/home"
-        />
+        android:icon="@drawable/emergency" />
 </menu>
