--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,11 +99,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:menu="@menu/navigation_menu"
-            android:layout_gravity="start">
-
-
-
-        </android.support.design.widget.NavigationView>
+            android:layout_gravity="start"
+            android:id="@+id/navview"/>
 
     </android.support.v4.widget.DrawerLayout>
 
