--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -11,7 +11,7 @@
         android:title="Tips n' News">
     </item>
 
-    <item android:id="@+id/setting"
+    <item android:id="@+id/settings"
         android:icon="@drawable/settings"
         android:title="Settings">
     </item>
