--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,15 @@
             android:id="@+id/Bones"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Bones"
+            android:gravity="center"
+            android:textColor="#228B22"
+            android:textSize="38sp"/>
+
+        <TextView
+            android:id="@+id/Splinters"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Splinters"
             android:gravity="center"
             android:textColor="#228B22"
