--- a/app/src/main/res/drawable/layout_border.xml
+++ b/app/src/main/res/drawable/layout_border.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="1dp" android:color="#228B22" />
-    <solid android:color="#ffffff" />
-    <padding android:left="6dp" android:top="6dp"
-        android:right="6dp" android:bottom="6dp" />
-    <corners android:radius="1dp" />
+    <stroke android:width="3dp" android:color="#c60000" />
+    <solid android:color="#ff0000" />
+    <padding android:left="3dp" android:top="3dp"
+        android:right="3dp" android:bottom="3dp" />
+    <corners android:radius="0dp" />
 </shape>
