--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -70,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:gravity="center"
             android:text=" For Allowing Us to Use Class Time and For Always Supporting Us Every Step of The Way"
             android:textSize="18sp"
             android:layout_gravity="center"/>
