--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#109a35</color>
-    <color name="colorPrimaryDark">#109a35</color>
+    <color name="colorPrimary">#130c8c</color>
+    <color name="colorPrimaryDark">#0a0463</color>
     <color name="colorAccent">#0000FF</color>
 </resources>
