--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:textStyle="bold"
-                android:text="Welcome"
+                android:text="Fuck"
                 android:textSize="58dp"
                 android:gravity="center"/>
 
