--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,113 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="com.examples.android.healthcross.MainActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:scrollbars = "vertical"
-        android:scrollbarStyle="insideInset"
-        android:background="@android:color/white">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@android:color/white">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:textStyle="bold"
-                android:text="Fuck"
-                android:textSize="58dp"
-                android:gravity="center"/>
-
-            <TextView
-                android:id="@+id/Bones"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:text="Fractures"
-                android:background="@drawable/red_border_top"
-                android:gravity="center"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold"
-                android:textSize="38sp"/>
-
-            <TextView
-                android:id="@+id/Burns"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:text="Burns"
-                android:gravity="center"
-                android:background="@drawable/red_border_top"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold"
-                android:textSize="38sp"/>
-
-            <TextView
-                android:id="@+id/Cut"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:text="Cut"
-                android:gravity="center"
-                android:background="@drawable/red_border_top"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold"
-                android:textSize="38sp"/>
-
-            <TextView
-                android:id="@+id/Scrapes"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:text="Scrapes"
-                android:gravity="center"
-                android:textColor="#228B22"
-                android:textSize="38sp"/>
-
-            <TextView
-                android:id="@+id/Puncture"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:text="Puncture"
-                android:gravity="center"
-                android:textColor="#228B22"
-                android:textSize="38sp"/>
-
-            <TextView
-                android:id="@+id/Splinters"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:text="Splinters"
-                android:gravity="center"
-                android:textColor="#228B22"
-                android:textSize="38sp"/>
-
-            <TextView
-                android:id="@+id/Remedies"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:text="Remedies"
-                android:gravity="center"
-                android:textColor="#228B22"
-                android:textSize="38sp"/>
-
-        </LinearLayout>
-
-    </ScrollView>
-
-
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/Drawer_Layout"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:scrollbarStyle="insideOverlay">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@android:color/white">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:textStyle="bold"
+                    android:text="Welcome"
+                    android:textSize="58dp"
+                    android:gravity="center" />
+
+                <TextView
+                    android:id="@+id/Bones"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:text="Fractures"
+                    android:background="@drawable/red_border_top"
+                    android:gravity="center"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:textSize="38sp" />
+
+                <TextView
+                    android:id="@+id/Burns"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:text="Burns"
+                    android:gravity="center"
+                    android:background="@drawable/red_border_top"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:textSize="38sp" />
+
+                <TextView
+                    android:id="@+id/Cut"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:text="Cut"
+                    android:gravity="center"
+                    android:background="@drawable/red_border_top"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:textSize="38sp" />
+
+                <TextView
+                    android:id="@+id/Scrapes"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:text="Scrapes"
+                    android:gravity="center"
+                    android:textColor="#228B22"
+                    android:textSize="38sp" />
+
+                <TextView
+                    android:id="@+id/Puncture"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:text="Puncture"
+                    android:gravity="center"
+                    android:textColor="#228B22"
+                    android:textSize="38sp" />
+
+                <TextView
+                    android:id="@+id/Splinters"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:text="Splinters"
+                    android:gravity="center"
+                    android:textColor="#228B22"
+                    android:textSize="38sp" />
+
+                <TextView
+                    android:id="@+id/Remedies"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:text="Remedies"
+                    android:gravity="center"
+                    android:textColor="#228B22"
+                    android:textSize="38sp" />
+
+            </LinearLayout>
+
+        </ScrollView>
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
@@ -118,4 +115,5 @@
 
     </android.support.v4.widget.DrawerLayout>
 
-</RelativeLayout>
+
+</android.widget.LinearLayout>
