--- a/app/src/main/res/drawable/red_border_top.xml
+++ b/app/src/main/res/drawable/red_border_top.xml
@@ -5,9 +5,9 @@
             <solid android:color="#c60000" />
         </shape>
     </item>
-    <item android:top="3dp">
+    <item android:top="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#FF0000" />
+            <solid android:color="#FFFFFF" />
         </shape>
     </item>
 </layer-list>
