--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.examples.android.healthcross.MainActivity">
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/Drawer_Layout"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
@@ -16,8 +16,10 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            android:scrollbarStyle="insideOverlay">
+            android:fillViewport="true"
+            android:scrollbars = "vertical"
+            android:scrollbarStyle="insideOverlay"
+            android:background="@android:color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -31,80 +33,129 @@
                     android:textStyle="bold"
                     android:text="Welcome"
                     android:textSize="58dp"
-                    android:gravity="center" />
+                    android:gravity="center"/>
 
                 <TextView
-                    android:id="@+id/Bones"
+                    android:id="@+id/fracturetitle"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:background="@drawable/red_border_top"
+                    android:layout_height="wrap_content"
                     android:text="Fractures"
-                    android:background="@drawable/red_border_top"
-                    android:gravity="center"
-                    android:textColor="#FFFFFF"
+
+                    android:textSize="35sp"
                     android:textStyle="bold"
-                    android:textSize="38sp" />
+                    android:textColor="#c60000"/>
+                <TextView
+                    android:id="@+id/fracturedescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="- For broken arms, legs and other bones\n- How to treat the wound and hold it in place"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    android:textColor="#000000"/>
+
 
                 <TextView
-                    android:id="@+id/Burns"
+                    android:id="@+id/burnstitle"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:background="@drawable/red_border_top"
+                    android:layout_height="wrap_content"
                     android:text="Burns"
-                    android:gravity="center"
-                    android:background="@drawable/red_border_top"
-                    android:textColor="#FFFFFF"
+                    android:textSize="35sp"
                     android:textStyle="bold"
-                    android:textSize="38sp" />
+                    android:textColor="#c60000"/>
+                <TextView
+                    android:id="@+id/burnsdescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    android:textColor="#000000"/>
+
 
                 <TextView
-                    android:id="@+id/Cut"
+                    android:id="@+id/scrapestitle"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="Cut"
-                    android:gravity="center"
                     android:background="@drawable/red_border_top"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold"
-                    android:textSize="38sp" />
-
-                <TextView
-                    android:id="@+id/Scrapes"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:text="Scrapes"
-                    android:gravity="center"
-                    android:textColor="#228B22"
-                    android:textSize="38sp" />
+                    android:textSize="35sp"
+                    android:textStyle="bold"
+                    android:textColor="#c60000"/>
+                <TextView
+                    android:id="@+id/scrapesdescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    android:textColor="#000000"/>
 
                 <TextView
-                    android:id="@+id/Puncture"
+                    android:id="@+id/puncturestitle"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="Puncture"
-                    android:gravity="center"
-                    android:textColor="#228B22"
-                    android:textSize="38sp" />
+                    android:background="@drawable/red_border_top"
+                    android:layout_height="wrap_content"
+                    android:text="Punctures"
+                    android:textSize="35sp"
+                    android:textStyle="bold"
+                    android:textColor="#c60000"/>
+                <TextView
+                    android:id="@+id/puncturesdescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    android:textColor="#000000"/>
 
                 <TextView
-                    android:id="@+id/Splinters"
+                    android:id="@+id/splinterstitle"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:background="@drawable/red_border_top"
+                    android:layout_height="wrap_content"
                     android:text="Splinters"
-                    android:gravity="center"
-                    android:textColor="#228B22"
-                    android:textSize="38sp" />
+                    android:textSize="35sp"
+                    android:textStyle="bold"
+                    android:textColor="#c60000"/>
+                <TextView
+                    android:id="@+id/splintersdescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="-"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    android:textColor="#000000"/>
 
                 <TextView
-                    android:id="@+id/Remedies"
+                    android:id="@+id/cprtitle"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:background="@drawable/red_border_top"
+                    android:layout_height="wrap_content"
                     android:text="Remedies"
-                    android:gravity="center"
-                    android:textColor="#228B22"
-                    android:textSize="38sp" />
+                    android:textSize="35sp"
+                    android:textStyle="bold"
+                    android:textColor="#c60000"/>
+                <TextView
+                    android:id="@+id/cprdescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    android:textColor="#000000"/>
 
             </LinearLayout>
 
         </ScrollView>
+
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
@@ -116,4 +167,4 @@
     </android.support.v4.widget.DrawerLayout>
 
 
-</android.widget.LinearLayout>
+</RelativeLayout>
