--- a/app/src/main/res/layout/activity_splinters.xml
+++ b/app/src/main/res/layout/activity_splinters.xml
@@ -23,7 +23,7 @@
 
             <TextView
                 android:layout_gravity="center_horizontal"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:text="-Clean the wound with soap and water\n-Remove large splinters with tweezers\n-If the small splinters hurt use sticky tape to pull out\n-If it doesn’t hurt let let it take its course"
                 android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
