--- a/app/src/main/res/layout/activity_fractures.xml
+++ b/app/src/main/res/layout/activity_fractures.xml
@@ -18,11 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-
             <TextView
-                android:text="injinjinjinjijnijninjijnijnijn"
+                android:layout_gravity="center_horizontal"
+                android:textSize="20sp"
+                android:text="-Stop any bleeding with cloth or clothing.\n- Immobilize the injured area using a splint, sling. etc.\n- Apply cold to the area for up to 10 minutes at a time.\n- Treat them for shock, get into a comfortable position\n- Get professional help: Call 911 or help them get to the emergency department for professional care"
+                android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="#c60000"/>
 
 
 
