--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -149,6 +149,28 @@
                     android:textStyle="italic"
                     android:textColor="#000000"/>
 
+                <TextView
+                    android:id="@+id/cprtitle"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/red_border_top"
+                    android:layout_height="wrap_content"
+                    android:onClick="openCPRActivity"
+                    android:text="CPR"
+                    android:textSize="35sp"
+                    android:textStyle="bold"
+                    android:textColor="#c60000"/>
+
+                <TextView
+                    android:id="@+id/cprdescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:onClick="openCPRActivity"
+                    android:text="- A medical procedure involving repeated compression of a patient's chest"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    android:textColor="#000000"/>
+
 
             </LinearLayout>
 
