--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -12,22 +12,21 @@
         android:id="@+id/Drawer_Layout"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:scrollbars = "vertical"
-        android:scrollbarStyle="insideOverlay"
-        android:background="@android:color/white">
-
-
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:scrollbars = "vertical"
+            android:scrollbarStyle="insideOverlay"
+            android:background="@android:color/white">
 
-            <TextView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@android:color/white">
+
+                <TextView
                 android:layout_marginTop="15dp"
                 android:layout_gravity="center"
                 android:textColor="#c60000"
@@ -37,19 +36,33 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-
-            <ImageView
+                <ImageView
                 android:layout_marginTop="5dp"
                 android:layout_width="fill_parent"
                 android:layout_height="490dp"
                 android:src="@drawable/health_art1"/>
 
 
+                <TextView
+                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center"
+                    android:textColor="#c60000"
+                    android:textSize="25sp"
+                    android:text="News"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:layout_marginTop="15dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="490dp"
+                    android:src="@drawable/health_art2"/>
+
+
             </LinearLayout>
 
-
-    </ScrollView>
-
+        </ScrollView>
 
 
         <android.support.design.widget.NavigationView
