--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -6,6 +6,11 @@
     android:title="Home Page">
     </item>
 
+    <item android:id="@+id/tracker"
+        android:icon="@drawable/tracker"
+        android:title="Health Tracker">
+    </item>
+
     <item android:id="@+id/news"
         android:icon="@drawable/tracker"
         android:title="Tips n' News">
