--- a/app/src/main/res/layout/activity_burns.xml
+++ b/app/src/main/res/layout/activity_burns.xml
@@ -23,8 +23,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="1st Degree"
-                android:textSize="27sp"
+                android:text=" 1st Degree"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
 
@@ -32,9 +32,10 @@
             <TextView
                 android:layout_gravity="center_horizontal"
                 android:textSize="16dp"
-                android:text="• Soaking the wound in cool water for five minutes or longer\n• Applying cream to soothe the skin \n• Using an antibiotic ointment and loose gauze to protect the affected area"
+                android:text="-Soaking the wound in cool water for five minutes or longer\n- Applying cream to soothe the skin \n- Using an antibiotic ointment and loose gauze to protect the affected area"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textColor="#c60000"/>
 
         </LinearLayout>
@@ -51,8 +52,8 @@
                 android:background="@drawable/red_border_top"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="2nd Degree"
-                android:textSize="27sp"
+                android:text=" 2nd Degree"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
 
@@ -60,9 +61,10 @@
             <TextView
                 android:layout_gravity="center_horizontal"
                 android:textSize="16dp"
-                android:text="• Running the skin under cool water for 15 minutes or longer\n• Taking over-the-counter pain medication\n• Applying antibiotic cream to blisters"
+                android:text="-Running the skin under cool water for 15 minutes or longer\n- Taking over-the-counter pain medication\n- Applying antibiotic cream to blisters"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textColor="#c60000"/>
 
         </LinearLayout>
@@ -78,16 +80,16 @@
                 android:background="@drawable/red_border_top"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="3rd Degree"
-                android:textSize="27sp"
+                android:text=" 3rd Degree"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
 
 
             <TextView
                 android:textSize="16dp"
-                android:text="• Never Attempt to treat a Third Degree burn\n• Press Emergency Button Immediately"
-
+                android:text="-Never Attempt to treat a Third Degree burn\n-Press Emergency Button Immediately"
+                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#c60000"/>
