--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -3,7 +3,7 @@
     android:opacity="opaque">
     <item android:drawable="@color/colorWhite"/>
     <item>
-        <bitmap android:src="@mipmap/healthcrosslogo" />
+        <bitmap android:src="@drawable/healthcrosslogo" />
 
     </item>
 </layer-list>
