--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
-                android:text="Special Thanks to Mr. Clarke \n                 Andy Yang"
+                android:text="Special Thanks to Mr. Clarke"
                 android:textSize="21sp"
                 android:textStyle="bold" />
 
