--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -45,7 +45,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="fill_parent"
                     android:layout_height="490dp"
-                    android:src="@mipmap/health_art4"/>
+                    android:src="@drawable/health_art2" />
 
 
                 <TextView
