--- a/app/src/main/res/layout/activity_flu.xml
+++ b/app/src/main/res/layout/activity_flu.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.examples.android.healthcross.Fractures">
+    tools:context="com.examples.android.healthcross.Flu">
 
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/Drawer_Layout"
@@ -16,19 +15,31 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_gravity="center_horizontal"
-                android:textSize="20sp"
-                android:text=" 1. Stop any bleeding with cloth or clothing. \n\n 2. Immobilize the injured area using a splint, sling. etc.\n\n 3. Apply cold to the area for up to 10 minutes at a time.
-\n 4. Treat them for shock, get into a comfortable position\n\n 5. Get professional help: Call 911 or help them get to the emergency department for professional care"
-                android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#c60000"/>
+                android:text=" Ways you can treat the flu"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
-
+            <TextView
+                android:textSize="20sp"
+                android:text=" 	• Stay away from others and stay at home
+ 	• Sleep as much as you need
+ 	• Refrain from high-impact exercise
+ 	• Wash your hands frequently (20 secs)
+ 	• Keep yourself hydrated and eat healthy
+ 	• Constantly blow your nose of mucus
+ 	• Take a hot shower or bath
+ 	• Do a face steam
+"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#c60000" />
 
         </LinearLayout>
 
@@ -37,7 +48,7 @@
             android:layout_height="match_parent"
             app:menu="@menu/navigation_menu"
             android:layout_gravity="start"
-            android:id="@+id/navview"/>
+            android:id="@+id/navview" />
 
     </android.support.v4.widget.DrawerLayout>
 
