--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
 
                 <TextView
                     android:id="@+id/fracturedescription"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:onClick="openFracturesActivity"
@@ -84,7 +84,7 @@
                     android:textColor="#c60000"/>
                 <TextView
                     android:id="@+id/burnsdescription"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:onClick="openBurnsActivity"
@@ -106,7 +106,7 @@
                     android:textColor="#c60000"/>
                 <TextView
                     android:id="@+id/cutsdescription"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:onClick="openCutActivity"
@@ -128,7 +128,7 @@
                     android:textColor="#c60000"/>
                 <TextView
                     android:id="@+id/scrapesdescription"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:onClick="openScrapesActivity"
@@ -152,7 +152,7 @@
                     android:textColor="#c60000"/>
                 <TextView
                     android:id="@+id/puncturesdescription"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:onClick="openPuncturesActivity"
@@ -176,7 +176,7 @@
                     android:textColor="#c60000" />
                 <TextView
                     android:id="@+id/splintersdescription"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:onClick="openSplintersActivity"
@@ -199,11 +199,34 @@
 
                 <TextView
                     android:id="@+id/cprdescription"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:onClick="openCPRActivity"
                     android:text="• A medical procedure involving repeated compression of a patient's chest"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp" />
+
+                <TextView
+                    android:id="@+id/flutitle"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/red_border_top"
+                    android:layout_height="wrap_content"
+                    android:onClick="openCPRActivity"
+                    android:text=" Flu"
+                    android:textSize="35sp"
+                    android:textStyle="bold"
+                    android:textColor="#c60000" />
+
+                <TextView
+                    android:id="@+id/fludescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:onClick="openFluActivity"
+                    android:text="• A common sickness that many contract during the flu season"
                     android:textSize="16sp"
                     android:textStyle="italic"
                     android:textColor="#000000"
