--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -214,7 +214,7 @@
                     android:layout_width="match_parent"
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
-                    android:onClick="openCPRActivity"
+                    android:onClick="openFluActivity"
                     android:text=" Flu"
                     android:textSize="35sp"
                     android:textStyle="bold"
