--- a/app/src/main/res/layout/activity_fractures.xml
+++ b/app/src/main/res/layout/activity_fractures.xml
@@ -22,7 +22,7 @@
                 android:layout_gravity="center_horizontal"
                 android:textSize="20sp"
                 android:text=" 1. Stop any bleeding with cloth or clothing. \n\n 2. Immobilize the injured area using a splint, sling. etc.\n\n 3. Apply cold to the area for up to 10 minutes at a time.
-\n 4. Treat them for shock, get into a comfortable position\n\n 5. Get professional help: Call 911 or help them get to the emergency department for professional care"
+\n\n 4. Treat them for shock, get into a comfortable position\n\n 5. Get professional help: Call 911 or help them get to the emergency department for professional care"
                 android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
